- now call guide action is documented like in devstudio and supports "All Visible Rows" table loops (new ARS 8.0 feature) - label fixed in field limit documentation of table fields (DocFieldDetails.cpp)
git-svn-id: http://svn.arinside.org/branches/work_304@317 1b5bf968-bca2-4794-aaf2-a93241d7ae32

--- a/res/style.css
+++ b/res/style.css
@@ -353,6 +353,12 @@ p
     margin-bottom: 6px;
 }
 
+p.last
+{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 .form_navigation {
   margin-left: 9px;
 }
